--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -33,12 +33,15 @@
 .contenedor-grid {
     @include flex-center;
     align-items: center;
-    width: 10 0%;
+    width: 100%;
     padding-left: 40px;
 
     .grid {
         display: grid;
         width: 90%;
+        @include tablet{
+            width: 100%;
+        }
 
         .grids {
             @include flex-center;
@@ -51,8 +54,10 @@
                     background-color: white;
                     -webkit-box-shadow: 0px 0px 12px -7px rgba(0, 0, 0, 0.45);
                     box-shadow: 0px 0px 12px -7px rgba(0, 0, 0, 0.45);
-                    @include mobile {
-                        height: 470px;
+
+                    @include tablet {
+                        height: 415px;
+                        width: 95%;
                     }
 
                     .image-content {
@@ -67,6 +72,9 @@
                                 padding-top: 25px;
                                 object-fit: contain;
                                 width: 50%;
+                                @include mobile{
+                                    width: 35%;
+                                }
                             }
                         }
                     }
@@ -91,6 +99,10 @@
                             font-weight: 400;
                             font-size: 1.2em;
                             text-align: center;
+
+                            @include tablet{
+                                font-size: $textMd;
+                            }
                         }
                     }
 
@@ -117,7 +129,7 @@
     }
 
     .grid-template-columns-rows {
-        grid-template-columns: repeat(3, 0.5fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 2fr;
         row-gap: 30px;
 
@@ -164,15 +176,27 @@
                             #gel-avena,
                             #cerave,
                             #cetaphil,
-                            #neutrogena,
                             #acf-limpiador,
                             #roche{
                                 width: 55%;
                             }
 
-                            #loreal-limpador,
+                            #neutrogena{
+                                width: 55%;
+                                @include tablet{
+                                    width: 60%;
+                                }
+                            }
+
+                            #loreal-limpador{
+                                width: 50%;
+                            }
+
                             #vichy{
                                 width: 50%;
+                                @include tablet {
+                                    width: 55%;
+                                }
                             }
 
                             #eucerin-s,
@@ -199,10 +223,25 @@
                                 width: 60%;
                             }
 
-                            #labial-nyx,
-                            #labial-mac,
                             #labial-lancome {
                                 width: 57%;
+                                @include tablet {
+                                    width: 61%;
+                                }
+                            }
+
+                            #labial-mac{
+                                width: 57%;
+                                @include tablet{
+                                    width: 62%;
+                                }
+                            }
+
+                            #labial-nyx{
+                                width: 57%;
+                                @include tablet {
+                                    width: 63%;
+                                }
                             }
 
                             #labial-nyx-2 {
@@ -241,7 +280,6 @@
                                 width: 51%;
                             }
 
-                            #paleta-too-faced,
                             #paleta-natasha,
                             #paleta-nars,
                             #paleta-clarins,
@@ -249,6 +287,13 @@
                             #sombra-rem,
                             #paleta-huda-2 {
                                 width: 50%;
+                            }
+
+                            #paleta-too-faced{
+                                width: 50%;
+                                @include tablet {
+                                    width: 56%;
+                                }
                             }
 
                             #paleta-anastasia{
@@ -261,30 +306,65 @@
                                 
                                 #base-guerlain,
                                 #mist-rare,
-                                #corrector-tarte,
-                                #polvo-huda,
-                                #spray-too-faced,
                                 #rubor-too-faced,
                                 #stick-fenty,
                                 #iluminador-rare {
                                     width: 50%;
                                 }
 
+                                #spray-too-faced{
+                                    width: 50%;
+                                    @include tablet {
+                                        width: 55%;
+                                    }
+                                }
+
+                                #polvo-huda{
+                                    width: 50%;
+                                    @include tablet {
+                                        width: 55%;
+                                    }
+                                }
+
+                                #corrector-tarte{
+                                    width: 50%;
+                                    @include tablet {
+                                        width: 52%;
+                                    }
+                                }
                                 #rubor-benefit{
                                     width: 46%;
                                 }
 
                                 #dr-jart-2,
-                                #bruma-roche,
                                 #bruma-eucerin,
-                                #idraet-1,
-                                #idraet-2 {
+                                #idraet-1{
                                     width: 55%;
                                 }
 
-                                #dr-jart,
+                                #idraet-2 {
+                                    width: 55%;
+                                    @include tablet {
+                                        width: 60%;
+                                    }
+                                }
+
+                                #bruma-roche{
+                                    width: 55%;
+                                    @include tablet {
+                                        width: 61%;
+                                    }
+                                }
+
+                                #dr-jart{
+                                    width: 61%;
+                                }
+
                                 #pixi{
                                     width: 61%;
+                                    @include tablet {
+                                        width: 70%;
+                                    }
                                 }
 
                                 #bruma-bio{
