--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,7 +23,8 @@
             width: 20%;
 
             #brand {
-                width: 60%;
+                width: 80%;
+                padding-left: 30px
             }
         }
 
@@ -32,8 +33,21 @@
             align-items: center;
             width: 40%;
 
+            .form-control{
+                @include mobile{
+                    height: 30px;
+                }
+            }
             .d-flex {
                 width: 100%;
+
+                .btn{
+                    @include mobile {
+                        height: 30px;
+                        display: flex;
+                        align-items: center;
+                    }
+                }
 
                 #barra {
                     border: black 1px solid;
