--- a/css/main.css
+++ b/css/main.css
@@ -99,30 +99,6 @@
   }
 }
 
-.navbar .container-fluid .navbar-collapse {
-  justify-content: center;
-}
-.navbar .container-fluid .navbar-collapse .navbar-nav .nav-item {
-  padding-right: 90px;
-}
-.navbar .container-fluid .navbar-collapse .navbar-nav .nav-item .nav-link {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-}
-
-.contenedor-navigation {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-.contenedor-navigation .cont-pages {
-  padding-top: 20px;
-}
-.contenedor-navigation .cont-pages nav .pagination .page-item {
-  border: 1px solid rgba(0, 0, 0, 0.288);
-  border-radius: 5%;
-}
-
 .contenedor-info {
   background-color: #03658C;
 }
@@ -301,13 +277,20 @@
   justify-content: center;
   padding: 10px;
 }
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #lancome,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #gel-avena,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #cerave,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #cetaphil,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #acf-limpiador,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #roche {
   width: 55%;
+}
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #lancome {
+  width: 55%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #lancome {
+    width: 63%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #neutrogena {
   width: 55%;
@@ -320,6 +303,11 @@
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #loreal-limpador {
   width: 50%;
 }
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #loreal-limpador {
+    width: 56%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #vichy {
   width: 50%;
 }
@@ -328,18 +316,45 @@
     width: 55%;
   }
 }
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #eucerin-s,
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #vichy {
+    width: 56%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #loreal-s {
   width: 50%;
+}
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #eucerin-s {
+  width: 50%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #eucerin-s {
+    width: 43%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #ruby {
   width: 53%;
 }
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #ruby {
+    width: 55%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #garnier-s {
   width: 54%;
 }
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #garnier-s {
+    width: 58%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #neutrogena-s {
   width: 56%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #neutrogena-s {
+    width: 60%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #serum-bio,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #veganis,
@@ -355,12 +370,25 @@
     width: 61%;
   }
 }
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-mac-powder {
+  width: 57%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-mac-powder {
+    width: 58%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-mac {
   width: 57%;
 }
 @media screen and (max-width: 992px) {
   .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-mac {
     width: 62%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-mac {
+    width: 63%;
   }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-nyx {
@@ -377,9 +405,21 @@
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #gloss-maybelline {
   width: 57%;
 }
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #lipglass,
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #gloss-maybelline {
+    width: 61%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #labial-mac-2 {
   width: 61%;
+}
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #lipglass {
+  width: 61%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #lipglass {
+    width: 68%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #mac-mascara,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #mac-labial,
@@ -418,15 +458,41 @@
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #paleta-anastasia {
   width: 50%;
 }
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #paleta-anastasia {
+    width: 43%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #paleta-huda {
   width: 83%;
 }
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #base-guerlain,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #mist-rare,
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #rubor-too-faced,
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #stick-fenty,
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #rubor-too-faced {
+  width: 50%;
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #iluminador-rare {
   width: 50%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #iluminador-rare {
+    width: 43%;
+  }
+}
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #stick-fenty {
+  width: 50%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #stick-fenty {
+    width: 41%;
+  }
+}
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #base-guerlain {
+  width: 50%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #base-guerlain {
+    width: 58%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #spray-too-faced {
   width: 50%;
@@ -453,12 +519,19 @@
   }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #rubor-benefit {
-  width: 46%;
+  width: 50%;
 }
-.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #dr-jart-2,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #bruma-eucerin,
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #idraet-1 {
   width: 55%;
+}
+.contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #dr-jart-2 {
+  width: 55%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #dr-jart-2 {
+    width: 43%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #idraet-2 {
   width: 55%;
@@ -490,8 +563,18 @@
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #bruma-bio {
   width: 51%;
 }
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #bruma-bio {
+    width: 48%;
+  }
+}
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #idraet-3 {
   width: 53%;
+}
+@media screen and (max-width: 1200px) {
+  .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .image-content-producto .card-image-producto #idraet-3 {
+    width: 59%;
+  }
 }
 .contenedor-grid-producto .grid-producto .grids-producto .slide-content-producto .card-producto .card-content-producto {
   display: flex;
@@ -550,6 +633,30 @@
   .contenedor-grid-producto .column-row-producto {
     grid-template-columns: 2fr;
   }
+}
+
+.navbar .container-fluid .navbar-collapse {
+  justify-content: center;
+}
+.navbar .container-fluid .navbar-collapse .navbar-nav .nav-item {
+  padding-right: 90px;
+}
+.navbar .container-fluid .navbar-collapse .navbar-nav .nav-item .nav-link {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+.contenedor-navigation {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.contenedor-navigation .cont-pages {
+  padding-top: 20px;
+}
+.contenedor-navigation .cont-pages nav .pagination .page-item {
+  border: 1px solid rgba(0, 0, 0, 0.288);
+  border-radius: 5%;
 }
 
 .flex-row {
@@ -630,6 +737,11 @@ section .lineas {
     font-size: 1.5em;
   }
 }
+@media screen and (max-width: 450px) {
+  .caja-suscripcion .cont-suscripcion .texto-suscripcion h1 {
+    font-size: 1.2em;
+  }
+}
 .caja-suscripcion .cont-suscripcion .texto-suscripcion h2 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
@@ -638,6 +750,11 @@ section .lineas {
 @media screen and (max-width: 576px) {
   .caja-suscripcion .cont-suscripcion .texto-suscripcion h2 {
     font-size: 1.2em;
+  }
+}
+@media screen and (max-width: 450px) {
+  .caja-suscripcion .cont-suscripcion .texto-suscripcion h2 {
+    font-size: 1em;
   }
 }
 .caja-suscripcion .cont-suscripcion .form-suscripcion {
@@ -657,8 +774,18 @@ section .lineas {
 .caja-suscripcion .cont-suscripcion .form-suscripcion .suscripcion .row-form .mb-3 #exampleInputName1 {
   width: 70%;
 }
+@media screen and (max-width: 450px) {
+  .caja-suscripcion .cont-suscripcion .form-suscripcion .suscripcion .row-form .mb-3 #exampleInputName1 {
+    width: 60%;
+  }
+}
 .caja-suscripcion .cont-suscripcion .form-suscripcion .suscripcion .row-form .mb-3 #exampleInputEmail1 {
   width: 70%;
+}
+@media screen and (max-width: 450px) {
+  .caja-suscripcion .cont-suscripcion .form-suscripcion .suscripcion .row-form .mb-3 #exampleInputEmail1 {
+    width: 60%;
+  }
 }
 .caja-suscripcion .cont-suscripcion .form-suscripcion .suscripcion #btn-primary {
   width: 28%;
@@ -707,39 +834,57 @@ section .lineas {
   font-weight: 400;
 }
 
-.menu-vertical {
+@media screen and (max-width: 576px) {
+  .flex-row {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+.flex-row .menu-vertical {
   padding-top: 30px;
   width: 18%;
   padding-left: 30px;
 }
 @media screen and (max-width: 992px) {
-  .menu-vertical {
+  .flex-row .menu-vertical {
     width: 32%;
     padding-left: 20px;
   }
 }
 @media screen and (max-width: 576px) {
-  .menu-vertical {
-    width: 48%;
+  .flex-row .menu-vertical {
+    width: 100%;
     padding-top: 10px;
   }
 }
-.menu-vertical .side-bar ul {
+.flex-row .menu-vertical .side-bar ul {
   margin: 10px;
-  padding: 0;
+  padding: 0px 20px;
   list-style: none;
   line-height: 16px;
 }
-.menu-vertical .side-bar ul li:hover ul {
-  height: auto;
-  padding: 5px;
+@media screen and (max-width: 576px) {
+  .flex-row .menu-vertical .side-bar ul {
+    display: flex;
+    flex-direction: row;
+  }
 }
-.menu-vertical .side-bar ul ul {
+.flex-row .menu-vertical .side-bar ul li:hover ul {
+  height: auto;
+  padding: 5px 10px;
+}
+@media screen and (max-width: 576px) {
+  .flex-row .menu-vertical .side-bar ul li ul {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.flex-row .menu-vertical .side-bar ul ul {
   height: 0px;
   overflow: hidden;
   transition: 0.4s;
 }
-.menu-vertical .side-bar ul a {
+.flex-row .menu-vertical .side-bar ul a {
   box-sizing: border-box;
   font-family: "League Spartan", sans-serif;
   font-family: "Montserrat", sans-serif;
@@ -750,7 +895,7 @@ section .lineas {
   text-decoration: none;
 }
 @media screen and (max-width: 576px) {
-  .menu-vertical .side-bar ul a {
+  .flex-row .menu-vertical .side-bar ul a {
     font-size: 1em;
   }
 }
