--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -74,6 +74,9 @@ section {
                 @include mobile {
                     font-size: $textLlg;
                 }
+                @include mobile-xs{
+                    font-size: $textLg;
+                }
             }
 
             h2 {
@@ -82,6 +85,9 @@ section {
                 font-size: $textLlg;
                 @include mobile {
                     font-size: $textLg;
+                }
+                @include mobile-xs{
+                    font-size: $textMd;
                 }
             }
         }
@@ -101,10 +107,16 @@ section {
                     .mb-3 {
                         #exampleInputName1 {
                             width: 70%;
+                            @include mobile-xs{
+                                width: 60%;
+                            }
                         }
 
                         #exampleInputEmail1 {
                             width: 70%;
+                            @include mobile-xs{
+                                width: 60%;
+                            }
                         }
 
 
@@ -160,50 +172,66 @@ section {
 }
 
 //side menu vertical
-.menu-vertical {
-    padding-top: 30px;
-    width: 18%;
-    padding-left: 30px;
-
-    @include tablet {
-        width: 32%;
-        padding-left: 20px;
-    }
-
+.flex-row{
     @include mobile {
-        width: 48%;
-        padding-top: 10px;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
-
-    .side-bar {
-        ul{
-            margin: 10px;
-            padding: 0;
-            list-style: none;
-            line-height: 16px;
-            li{
-                
-                &:hover ul{
-                    height: auto;
-                    padding: 5px;
-                }
-            }
+    .menu-vertical {
+        padding-top: 30px;
+        width: 18%;
+        padding-left: 30px;
+    
+        @include tablet {
+            width: 32%;
+            padding-left: 20px;
+        }
+    
+        @include mobile {
+            width: 100%;
+            padding-top: 10px;
+        }
+    
+        .side-bar {
             ul{
-                height: 0px;
-                overflow: hidden;
-                transition: 0.4s;
-            }
-            a{
-                box-sizing: border-box;
-                font-family: 'League Spartan', sans-serif;
-                font-family: 'Montserrat', sans-serif;
-                font-size: $textLg;
-                color: black;
-                display: block;
-                width: 100%;
-                text-decoration: none;
-                @include mobile {
-                    font-size: $textMd;
+                margin: 10px;
+                padding: 0px 20px;
+                list-style: none;
+                line-height: 16px;
+                @include mobile{
+                    display: flex;
+                    flex-direction: row;
+                }
+                li{
+                    
+                    &:hover ul{
+                        height: auto;
+                        padding: 5px 10px;
+                    }
+                    ul{
+                        @include mobile{
+                            display: flex;
+                            flex-direction: column;
+                        }
+                    }
+                }
+                ul{
+                    height: 0px;
+                    overflow: hidden;
+                    transition: 0.4s;
+                }
+                a{
+                    box-sizing: border-box;
+                    font-family: 'League Spartan', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: $textLg;
+                    color: black;
+                    display: block;
+                    width: 100%;
+                    text-decoration: none;
+                    @include mobile {
+                        font-size: $textMd;
+                    }
                 }
             }
         }
